adds basic implementation of multilanguage support

--- a/composeApp/src/wasmJsMain/resources/index.html
+++ b/composeApp/src/wasmJsMain/resources/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeCareer</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
+
+    <script>
+        let enTranslations = {};
+        function getJsonData() {
+            return JSON.stringify(enTranslations);
+        }
+        function loadEnLanguage() {
+            return fetch(`lang/en.json`)
+                .then(response => response.json())
+                .then(data => {
+                    enTranslations = data;
+                    console.log(`Loaded language: en`, enTranslations);
+                })
+                .catch(error => console.error(`Error loading lang/en.json:`, error));
+        }
+    </script>
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
