--- a/CodeCareer/composeApp/src/wasmJsMain/resources/index.html
+++ b/CodeCareer/composeApp/src/wasmJsMain/resources/index.html
@@ -36,6 +36,7 @@
         }
 
     </script>
+    <script type="application/javascript" src="requestSender.js"></script>
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
