adds support of Oauth2 authentication using Google

--- a/CodeCareer/composeApp/src/wasmJsMain/resources/index.html
+++ b/CodeCareer/composeApp/src/wasmJsMain/resources/index.html
@@ -37,6 +37,7 @@
 
     </script>
     <script type="application/javascript" src="requestSender.js"></script>
+    <script type="application/javascript" src="firebaseManager.js"></script>
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
